--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -6,13 +6,13 @@ orbs:
 parameters:
   project-name:
     type: string
-    description: Name of the global project, it will be used for the container registry, example -> tezoslink (has frontend and backend modules)
+    description: Name of the global project, it will be used for the container registry, example -> tezoslink (has frontend and p1-apiend modules)
     default: tezoslink
 
   project-module:
     type: string
     description: Name of the app or module of the project, it will be used for the container registry, for example tezoslink has a front and back app, example -> front
-    default: back
+    default: p1-api
 
   dockerfile-location:
     type: string
@@ -22,7 +22,7 @@ parameters:
   project-helm-values:
     type: string
     description: Index of values in the helm chart file, example -> testApp
-    default: tezosLinkBack
+    default: tezosLinkp1-api
 
   # stg-devops-path:
   #   type: string
@@ -169,12 +169,12 @@ jobs:
       #     name: Save image
       #     command: > 
       #         docker save 
-      #         -o /tmp/workspace/tezoslink-back.tar 
+      #         -o /tmp/workspace/tezoslink-p1-api.tar 
       #         rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
       # - persist_to_workspace:
       #     root: /tmp/workspace
       #     paths:
-      #       - tezoslink-back.tar
+      #       - tezoslink-p1-api.tar
   
   # scan-docker-image:
   #   parameters:
@@ -199,7 +199,7 @@ jobs:
   #               name: Run Trivy
   #               command: >
   #                   ${HOME}/trivy image 
-  #                   --input /tmp/workspace/tezoslink-back.tar
+  #                   --input /tmp/workspace/tezoslink-p1-api.tar
   #                   -o trivy-output.html 
   #                   -t "@devops/security/trivy/html.tpl" 
   #                   -f template 
@@ -214,7 +214,7 @@ jobs:
   #               name: Run Trivy
   #               command: > 
   #                 ${HOME}/trivy image 
-  #                 --input /tmp/workspace/tezoslink-back.tar
+  #                 --input /tmp/workspace/tezoslink-p1-api.tar
   #                 <<parameters.args>>
       
   push-docker-image:
@@ -239,7 +239,7 @@ jobs:
           command: docker login rg.fr-par.scw.cloud -u nologin -p $SCW_SECRET_KEY
       # - run: 
       #     name: Load docker image from workspace
-      #     command: docker load -i /tmp/workspace/tezoslink-back.tar
+      #     command: docker load -i /tmp/workspace/tezoslink-p1-api.tar
       - run:
           name: Push image
           command: docker push rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
