--- a/.circleci/workflows copy.yml
+++ b/.circleci/workflows copy.yml
@@ -6,13 +6,13 @@ orbs:
 parameters:
   project-name:
     type: string
-    description: Name of the global project, it will be used for the container registry, example -> tezoslink (has frontend and p1-apiend modules)
+    description: Name of the global project, it will be used for the container registry, example -> tezoslink (has frontend and backend modules)
     default: tezoslink
 
   project-module:
     type: string
     description: Name of the app or module of the project, it will be used for the container registry, for example tezoslink has a front and back app, example -> front
-    default: p1-api
+    default: back
 
   dockerfile-location:
     type: string
@@ -22,22 +22,22 @@ parameters:
   project-helm-values:
     type: string
     description: Index of values in the helm chart file, example -> testApp
-    default: tezosLinkp1-api
+    default: tezosLinkBack
 
-  # stg-devops-path:
-  #   type: string
-  #   description: Path to the values for stg cluster
-  #   default: ./devops/stg.values.yaml
+  stg-devops-path:
+    type: string
+    description: Path to the values for stg cluster
+    default: ./devops/stg.values.yaml
 
-  # ppd-devops-path:
-  #   type: string
-  #   description: Path to the values for ppd(prod) cluster
-  #   default: ./devops/ppd.values.yaml
+  ppd-devops-path:
+    type: string
+    description: Path to the values for ppd(prod) cluster
+    default: ./devops/ppd.values.yaml
 
-  # prod-devops-path:
-  #   type: string
-  #   description: Path to the values for prod cluster
-  #   default: ./devops/prd.values.yaml
+  prod-devops-path:
+    type: string
+    description: Path to the values for prod cluster
+    default: ./devops/prd.values.yaml
 
 ########################################################
 ################## DO NOT EDIT #########################
@@ -47,10 +47,10 @@ parameters:
     description: This is the directory of the app, used to trigger app build & deploy
     default: false 
 
-  # devops: 
-  #   type: boolean 
-  #   description: This is the directory of the devops, used to trigger devops only deploy
-  #   default: false
+  devops: 
+    type: boolean 
+    description: This is the directory of the devops, used to trigger devops only deploy
+    default: false
 ########################################################
 
 ###################################################################
@@ -72,13 +72,13 @@ commands:
             chmod +x ${HOME}/yq
             ${HOME}/yq --version
   
-  # install-trivy:
-  #   steps:
-  #     - run: 
-  #         name: Install Trivy
-  #         command: |
-  #           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b $HOME
-  #           chmod +x ${HOME}/trivy
+  install-trivy:
+    steps:
+      - run: 
+          name: Install Trivy
+          command: |
+            curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b $HOME
+            chmod +x ${HOME}/trivy
 
 
 jobs:
@@ -130,19 +130,19 @@ jobs:
   #         when: on_fail
   #         command: echo 'Please review your tag'
 
-  # run-gitleaks:
-  #   docker:
-  #     - image: zricethezav/gitleaks:v8.15.0
-  #   steps:
-  #     - checkout
-  #     - run: 
-  #         name: Create scan directory
-  #         command: mkdir /tmp/gitleaks
-  #     - run: 
-  #         name: Starting scan
-  #         command: gitleaks detect --source . --log-opts "-p -n 1" -r /tmp/gitleaks/scan.json -v
-  #     - store_artifacts:
-  #         path: /tmp/gitleaks/scan.json
+  run-gitleaks:
+    docker:
+      - image: zricethezav/gitleaks:v8.15.0
+    steps:
+      - checkout
+      - run: 
+          name: Create scan directory
+          command: mkdir /tmp/gitleaks
+      - run: 
+          name: Starting scan
+          command: gitleaks detect --source . --log-opts "-p -n 1" -r /tmp/gitleaks/scan.json -v
+      - store_artifacts:
+          path: /tmp/gitleaks/scan.json
 
   build-docker-image: 
     machine:
@@ -165,16 +165,16 @@ jobs:
               docker build 
               --tag rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1 
               <<pipeline.parameters.dockerfile-location>> | while read line; do echo "$(date +%T) > $line"; done;
-      # - run: 
-      #     name: Save image
-      #     command: > 
-      #         docker save 
-      #         -o /tmp/workspace/tezoslink-p1-api.tar 
-      #         rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
-      # - persist_to_workspace:
-      #     root: /tmp/workspace
-      #     paths:
-      #       - tezoslink-p1-api.tar
+      - run: 
+          name: Save image
+          command: > 
+              docker save 
+              -o workspace/tezoslink-back.tar 
+              rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
+      - persist_to_workspace:
+          root: workspace
+          paths:
+            - tezoslink-back.tar
   
   # scan-docker-image:
   #   parameters:
@@ -199,7 +199,7 @@ jobs:
   #               name: Run Trivy
   #               command: >
   #                   ${HOME}/trivy image 
-  #                   --input /tmp/workspace/tezoslink-p1-api.tar
+  #                   --input /tmp/workspace/tezoslink-back.tar
   #                   -o trivy-output.html 
   #                   -t "@devops/security/trivy/html.tpl" 
   #                   -f template 
@@ -214,7 +214,7 @@ jobs:
   #               name: Run Trivy
   #               command: > 
   #                 ${HOME}/trivy image 
-  #                 --input /tmp/workspace/tezoslink-p1-api.tar
+  #                 --input /tmp/workspace/tezoslink-back.tar
   #                 <<parameters.args>>
       
   push-docker-image:
@@ -224,7 +224,8 @@ jobs:
       - checkout
       - install-yq
       - attach_workspace:
-          at: /tmp/workspace
+#          at: /tmp/workspace
+          at: /workspace
       - run:
           name: Extract TAG from Chart.yaml
           command: echo "export TAG=$(${HOME}/yq '.appVersion' devops/Chart.yaml )" >> $BASH_ENV
@@ -237,54 +238,55 @@ jobs:
       - run:
           name: Login to SCW registry
           command: docker login rg.fr-par.scw.cloud -u nologin -p $SCW_SECRET_KEY
-      # - run: 
-      #     name: Load docker image from workspace
-      #     command: docker load -i /tmp/workspace/tezoslink-p1-api.tar
+      - run: 
+          name: Load docker image from workspace
+#          command: docker load -i /tmp/workspace/tezoslink-back.tar
+          command: docker load -i /workspace/tezoslink-back.tar
       - run:
           name: Push image
           command: docker push rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
 
-  # deploy:
-  #   parameters:
-  #     env:
-  #       type: string
-  #       default: ""
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
-  #     - install-yq
-  #     - run:
-  #         name: Get name of project from repo url 
-  #         command: echo "export NAMESPACE=$(echo '<<pipeline.project.git_url>>' | sed 's:.*/::')">> $BASH_ENV
-  #     - run:
-  #         name: Slugify name from repo url 
-  #         command: echo "export NAMESPACE=$(echo $NAMESPACE | awk '{gsub(/[^0-9a-zA-Z .-]/,""); gsub(/^[ \t\r\n]+/, ""); gsub(/[ \t\r\n]+$/, ""); gsub(/[ ]+/,"-"); print tolower($0);}')">> $BASH_ENV
-  #     - run:
-  #         name: Extract TAG from Chart.yaml
-  #         command: echo "export TAG=$(${HOME}/yq '.appVersion' devops/Chart.yaml )" >> $BASH_ENV
-  #     - run: 
-  #         name: Tag is 1
-  #         command: echo 1
-  #     - run:
-  #         name: Login to SCW registry
-  #         command: docker login rg.fr-par.scw.cloud/$NAMESPACE -u nologin -p $SCW_SECRET_KEY
-  #     - run:
-  #         name: Verify if tag exists in registry 
-  #         command: docker manifest inspect rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
-  #     - kubernetes/install-kubeconfig:
-  #         kubeconfig: KUBECONFIG_DATA
-  #     - helm/install-helm-client
-  #     - run:
-  #         name: Deploy
-  #         command: >
-  #             helm upgrade 
-  #             $NAMESPACE-<<parameters.env>> ./devops -i -f devops/<<parameters.env>>.values.yaml 
-  #             -n $NAMESPACE-<<parameters.env>> 
-  #             --create-namespace 
-  #             --set << pipeline.parameters.project-helm-values >>.image.tag=1 
-  #             --set namespace=$NAMESPACE-<<parameters.env>> 
-  #             --set << pipeline.parameters.project-helm-values >>.image.repository='rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>'
+  deploy:
+    parameters:
+      env:
+        type: string
+        default: ""
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install-yq
+      - run:
+          name: Get name of project from repo url 
+          command: echo "export NAMESPACE=$(echo '<<pipeline.project.git_url>>' | sed 's:.*/::')">> $BASH_ENV
+      - run:
+          name: Slugify name from repo url 
+          command: echo "export NAMESPACE=$(echo $NAMESPACE | awk '{gsub(/[^0-9a-zA-Z .-]/,""); gsub(/^[ \t\r\n]+/, ""); gsub(/[ \t\r\n]+$/, ""); gsub(/[ ]+/,"-"); print tolower($0);}')">> $BASH_ENV
+      - run:
+          name: Extract TAG from Chart.yaml
+          command: echo "export TAG=$(${HOME}/yq '.appVersion' devops/Chart.yaml )" >> $BASH_ENV
+      - run: 
+          name: Tag is 1
+          command: echo 1
+      - run:
+          name: Login to SCW registry
+          command: docker login rg.fr-par.scw.cloud/$NAMESPACE -u nologin -p $SCW_SECRET_KEY
+      - run:
+          name: Verify if tag exists in registry 
+          command: docker manifest inspect rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
+      - kubernetes/install-kubeconfig:
+          kubeconfig: KUBECONFIG_DATA
+      - helm/install-helm-client
+      - run:
+          name: Deploy
+          command: >
+              helm upgrade 
+              $NAMESPACE-<<parameters.env>> ./devops -i -f devops/<<parameters.env>>.values.yaml 
+              -n $NAMESPACE-<<parameters.env>> 
+              --create-namespace 
+              --set << pipeline.parameters.project-helm-values >>.image.tag=1 
+              --set namespace=$NAMESPACE-<<parameters.env>> 
+              --set << pipeline.parameters.project-helm-values >>.image.repository='rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>'
 
 
 workflows:
@@ -292,10 +294,10 @@ workflows:
   build-scan-push-deploy-stg:
     when: <<pipeline.parameters.src>>
     jobs:
-      # - run-gitleaks:
-      #     filters: &filters-stg
-      #       branches:
-      #         only: application-segmentation-2
+      - run-gitleaks:
+          filters: &filters-stg
+            branches:
+              only: application-segmentation-2
       # - verify-tag:
       #     filters:
       #       <<: *filters-stg
@@ -306,8 +308,8 @@ workflows:
           #   - verify-tag
           context:
             - application-segmentation-2
-          # filters:
-          #   <<: *filters-stg
+          filters:
+            <<: *filters-stg
       # - scan-docker-image:
       #     name: scan-docker-image
       #     export-output: true
@@ -331,32 +333,32 @@ workflows:
           #   - scan-docker-image
           context:
             - application-segmentation-2
-          # filters:
-          #   <<: *filters-stg
-      # - deploy:
-      #     name: deploy-stg
-      #     env: stg
-      #     filters:
-      #       <<: *filters-stg
-      #     requires:
-      #       - push-docker-image
-      #     context:
-      #       - application-segmentation-2
+          filters:
+            <<: *filters-stg
+      - deploy:
+          name: deploy-stg
+          env: stg
+          filters:
+            <<: *filters-stg
+          requires:
+            - push-docker-image
+          context:
+            - application-segmentation-2
 
   build-scan-push-deploy-ppd:
     when: <<pipeline.parameters.src>>
     jobs:
-      # - run-gitleaks:
-      #     filters: &filters-ppd
-      #       branches:
-      #         only: preprod
+      - run-gitleaks:
+          filters: &filters-ppd
+            branches:
+              only: preprod
       - build-docker-image:
-          # requires:
-          #   - run-gitleaks
+          requires:
+            - run-gitleaks
           context:
             - production
-          # filters:
-          #   <<: *filters-ppd
+          filters:
+            <<: *filters-ppd
       # - scan-docker-image:
       #     name: scan-docker-image
       #     export-output: true
@@ -380,32 +382,32 @@ workflows:
           #   - scan-docker-image
           context:
             - production
-          # filters:
-          #   <<: *filters-ppd
-      # - deploy:
-      #     name: deploy-ppd
-      #     env: ppd
-      #     filters:
-      #       <<: *filters-ppd
-      #     requires:
-      #       - push-docker-image
-      #     context:
-      #       - production
+          filters:
+            <<: *filters-ppd
+      - deploy:
+          name: deploy-ppd
+          env: ppd
+          filters:
+            <<: *filters-ppd
+          requires:
+            - push-docker-image
+          context:
+            - production
 
   build-scan-push-deploy-prd:
     when: <<pipeline.parameters.src>>
     jobs:
-      # - run-gitleaks:
-      #     filters: &filters-prd
-      #       branches:
-      #         only: main
+      - run-gitleaks:
+          filters: &filters-prd
+            branches:
+              only: main
       - build-docker-image:
-          # requires:
-          #   - run-gitleaks
+          requires:
+            - run-gitleaks
           context:
             - production
-          # filters:
-          #   <<: *filters-prd
+          filters:
+            <<: *filters-prd
       # - scan-docker-image:
       #     name: scan-docker-image
       #     export-output: true
@@ -429,89 +431,89 @@ workflows:
           #   - scan-docker-image
           context:
             - production
-          # filters:
-          #   <<: *filters-prd
-      # - deploy:
-      #     name: deploy-prd
-      #     env: prd
-      #     filters:
-      #       <<: *filters-prd
-      #     requires:
-      #       - push-docker-image
-      #     context:
-      #       - production
+          filters:
+            <<: *filters-prd
+      - deploy:
+          name: deploy-prd
+          env: prd
+          filters:
+            <<: *filters-prd
+          requires:
+            - push-docker-image
+          context:
+            - production
 
-  # deploy-new-infra-config-stg:
-  #   when: 
-  #     and:
-  #       - <<pipeline.parameters.devops>>
-  #       - not: <<pipeline.parameters.src>>
-  #   jobs:
-  #     # - run-gitleaks:
-  #     #     filters: 
-  #     #       <<: *filters-stg
-  #     - deploy:
-  #         env: stg
-  #         # filters:
-  #         #   <<: *filters-stg
-  #         context:
-  #           - application-segmentation-2
-  #         # requires:
-  #         #   - run-gitleaks
+  deploy-new-infra-config-stg:
+    when: 
+      and:
+        - <<pipeline.parameters.devops>>
+        - not: <<pipeline.parameters.src>>
+    jobs:
+      - run-gitleaks:
+          filters: 
+            <<: *filters-stg
+      - deploy:
+          env: stg
+          filters:
+            <<: *filters-stg
+          context:
+            - application-segmentation-2
+          requires:
+            - run-gitleaks
 
-  # deploy-new-infra-config-ppd:
-  #   when: 
-  #     and:
-  #       - <<pipeline.parameters.devops>>
-  #       - not: <<pipeline.parameters.src>>
-  #   jobs:
-  #     - run-gitleaks:
-  #         filters: 
-  #           <<: *filters-ppd
-  #     - validate-ppd-deploy:
-  #         type: approval
-  #         filters:
-  #           <<: *filters-ppd
-  #         requires:
-  #           - run-gitleaks
-  #     - deploy:
-  #         env: ppd
-  #         filters:
-  #           <<: *filters-ppd
-  #         requires:
-  #           - validate-ppd-deploy
-  #         context:
-  #           - production
+  deploy-new-infra-config-ppd:
+    when: 
+      and:
+        - <<pipeline.parameters.devops>>
+        - not: <<pipeline.parameters.src>>
+    jobs:
+      - run-gitleaks:
+          filters: 
+            <<: *filters-ppd
+      - validate-ppd-deploy:
+          type: approval
+          filters:
+            <<: *filters-ppd
+          requires:
+            - run-gitleaks
+      - deploy:
+          env: ppd
+          filters:
+            <<: *filters-ppd
+          requires:
+            - validate-ppd-deploy
+          context:
+            - production
 
-  # deploy-new-infra-config-prd:
-  #   when: 
-  #     and:
-  #       - <<pipeline.parameters.devops>>
-  #       - not: <<pipeline.parameters.src>>
-  #   jobs:
-  #     - run-gitleaks:
-  #         filters: 
-  #           <<: *filters-prd
-  #     - validate-prod-deploy:
-  #         type: approval
-  #         filters:
-  #           <<: *filters-prd
-  #         requires:
-  #           - run-gitleaks
-  #     - deploy:
-  #         env: prd
-  #         filters:
-  #           <<: *filters-prd
-  #         requires:
-  #           - validate-prod-deploy
-  #         context:
-  #           - production
+  deploy-new-infra-config-prd:
+    when: 
+      and:
+        - <<pipeline.parameters.devops>>
+        - not: <<pipeline.parameters.src>>
+    jobs:
+      - run-gitleaks:
+          filters: 
+            <<: *filters-prd
+      - validate-prod-deploy:
+          type: approval
+          filters:
+            <<: *filters-prd
+          requires:
+            - run-gitleaks
+      - deploy:
+          env: prd
+          filters:
+            <<: *filters-prd
+          requires:
+            - validate-prod-deploy
+          context:
+            - production
 
 
   default: 
     when: 
       and: 
-#        - not: <<pipeline.parameters.devops>>
+        - not: <<pipeline.parameters.devops>>
         - not: <<pipeline.parameters.src>>
     jobs: 
       - default:
