--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -326,24 +326,24 @@ workflows:
             - application-segmentation-2
           filters:
             <<: *filters-stg
-      - scan-docker-image:
-          name: scan-docker-image
-          export-output: true
-          requires:
-            - build-docker-image
-          context:
-            - staging
-          filters:
-            <<: *filters-stg
-      - scan-docker-image:
-          name: critical-vulnerabilities-gate
-          args: "-s CRITICAL --exit-code 1"
-          requires:
-            - build-docker-image
-          context:
-            - staging
-          filters:
-            <<: *filters-stg
+      # - scan-docker-image:
+      #     name: scan-docker-image
+      #     export-output: true
+      #     requires:
+      #       - build-docker-image
+      #     context:
+      #       - staging
+      #     filters:
+      #       <<: *filters-stg
+      # - scan-docker-image:
+      #     name: critical-vulnerabilities-gate
+      #     args: "-s CRITICAL --exit-code 1"
+      #     requires:
+      #       - build-docker-image
+      #     context:
+      #       - staging
+      #     filters:
+      #       <<: *filters-stg
       - push-docker-image:
           requires:
             - scan-docker-image
@@ -375,24 +375,24 @@ workflows:
             - production
           filters:
             <<: *filters-ppd
-      - scan-docker-image:
-          name: scan-docker-image
-          export-output: true
-          requires:
-            - build-docker-image
-          context:
-            - production
-          filters:
-            <<: *filters-ppd
-      - scan-docker-image:
-          name: critical-vulnerabilities-gate
-          args: "-s CRITICAL --exit-code 1"
-          requires:
-            - build-docker-image
-          context:
-            - production
-          filters:
-            <<: *filters-ppd
+      # - scan-docker-image:
+      #     name: scan-docker-image
+      #     export-output: true
+      #     requires:
+      #       - build-docker-image
+      #     context:
+      #       - production
+      #     filters:
+      #       <<: *filters-ppd
+      # - scan-docker-image:
+      #     name: critical-vulnerabilities-gate
+      #     args: "-s CRITICAL --exit-code 1"
+      #     requires:
+      #       - build-docker-image
+      #     context:
+      #       - production
+      #     filters:
+      #       <<: *filters-ppd
       - push-docker-image:
           requires:
             - scan-docker-image
@@ -424,24 +424,24 @@ workflows:
             - production
           filters:
             <<: *filters-prd
-      - scan-docker-image:
-          name: scan-docker-image
-          export-output: true
-          requires:
-            - build-docker-image
-          context:
-            - production
-          filters:
-            <<: *filters-prd
-      - scan-docker-image:
-          name: critical-vulnerabilities-gate
-          args: "-s CRITICAL --exit-code 1"
-          requires:
-            - build-docker-image
-          context:
-            - production
-          filters:
-            <<: *filters-prd
+      # - scan-docker-image:
+      #     name: scan-docker-image
+      #     export-output: true
+      #     requires:
+      #       - build-docker-image
+      #     context:
+      #       - production
+      #     filters:
+      #       <<: *filters-prd
+      # - scan-docker-image:
+      #     name: critical-vulnerabilities-gate
+      #     args: "-s CRITICAL --exit-code 1"
+      #     requires:
+      #       - build-docker-image
+      #     context:
+      #       - production
+      #     filters:
+      #       <<: *filters-prd
       - push-docker-image:
           requires:
             - scan-docker-image
