--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -310,10 +310,10 @@ workflows:
   build-scan-push-deploy-stg:
     when: <<pipeline.parameters.src>>
     jobs:
-      - run-gitleaks:
-          filters: &filters-stg
-            branches:
-              only: application-segmentation-2
+      # - run-gitleaks:
+      #     filters: &filters-stg
+      #       branches:
+      #         only: application-segmentation-2
       - verify-tag:
           filters:
             <<: *filters-stg
@@ -364,10 +364,10 @@ workflows:
   build-scan-push-deploy-ppd:
     when: <<pipeline.parameters.src>>
     jobs:
-      - run-gitleaks:
-          filters: &filters-ppd
-            branches:
-              only: preprod
+      # - run-gitleaks:
+      #     filters: &filters-ppd
+      #       branches:
+      #         only: preprod
       - build-docker-image:
           requires:
             - run-gitleaks
@@ -413,10 +413,10 @@ workflows:
   build-scan-push-deploy-prd:
     when: <<pipeline.parameters.src>>
     jobs:
-      - run-gitleaks:
-          filters: &filters-prd
-            branches:
-              only: main
+      # - run-gitleaks:
+      #     filters: &filters-prd
+      #       branches:
+      #         only: main
       - build-docker-image:
           requires:
             - run-gitleaks
