--- a/helm-charts-p2/templates/testnet/api.deployment.yaml
+++ b/helm-charts-p2/templates/testnet/api.deployment.yaml
@@ -14,14 +14,34 @@ spec:
       labels:
 {{- include "helpers.api.selectorLabels" . | nindent 8 }}
     spec:
+      serviceAccountName: api-sa
       imagePullSecrets:
-      - name: docker-pull-secret
+        - name: docker-pull-secret
       containers:
-      - name: {{ include "helpers.fullname" . }}-api
-        imagePullPolicy: {{ .Values.api.image.pullPolicy }}
-        image: "{{ .Values.api.image.repository }}:{{ .Values.api.image.tag }}"
-        resources:
-{{toYaml .Values.api.resources | indent 10}}
-        env:
-{{toYaml .Values.api.env | indent 10}}
+        - name: {{ include "helpers.fullname" . }}-api
+          imagePullPolicy: {{ .Values.api.image.pullPolicy }}
+          image: "{{ .Values.api.image.repository }}:{{ .Values.api.image.tag }}"
+          resources:
+{{toYaml .Values.api.resources | indent 12}}
+          env:
+            - name: API_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "helpers.fullname" . }}-cm
+                  key: API_URL
+            - name: PROXY_TESTNET_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "helpers.fullname" . }}-cm
+                  key: PROXY_TESTNET_URL
+            - name: FRONT_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ include "helpers.fullname" . }}-cm
+                  key: FRONT_URL
+          {{- range $key, $val := .Values.api.env }}
+            - name: {{ $key }}
+              value: {{ $val | quote }}
+          {{- end }}
+
         
