--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,14 +22,14 @@ jobs:
 
 workflows:
   version: 2
-  build:
-    jobs:
-      - build-docker-image:
-          filters:
-            tags:
-              only: /^build.*/
-            branches:
-              ignore: /.*/
+  # build:
+  #   jobs:
+  #     - build-docker-image:
+  #         filters:
+  #           tags:
+  #             only: /^build.*/
+  #           branches:
+  #             ignore: /.*/
   build-and-register:
     jobs:
       - build-push-docker-image:
