--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           version: 20.10.12
           docker_layer_caching: true
       - run: docker login rg.fr-par.scw.cloud/tezoslink -u nologin -p $SCW_SECRET_KEY
-      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-api:$TAG Dockerfiles/Dockerfile.api
+      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-api:$TAG /Dockerfiles/Dockerfile.api
       - run: docker push rg.fr-par.scw.cloud/tezoslink/p1-api:$TAG
       - run: docker login rg.fr-par.scw.cloud/tezoslink -u nologin -p $SCW_SECRET_KEY
       - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-frontend:$TAG Dockerfiles/Dockerfile.front
@@ -20,16 +20,25 @@ jobs:
       - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-proxy:$TAG Dockerfiles/Dockerfile.proxy
       - run: docker push rg.fr-par.scw.cloud/tezoslink/p1-proxy:$TAG
 
+  deploy-docker-image:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - kubernetes/install-kubeconfig:
+          kubeconfig: KUBECONFIG_DATA
+      - helm/install-helm-client
+      - run: helm upgrade 
+              phase1-<<parameters.env>> ./devops -i -f devops/<<parameters.env>>.values.yaml 
+              -n phase1-<<parameters.env>> 
+              --create-namespace 
+              --set << pipeline.parameters.project-helm-values >>.image.tag=$TAG 
+              --set namespace=phase1-<<parameters.env>> 
+              --set << pipeline.parameters.project-helm-values >>.image.repository='rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>'
+
+    
+
 workflows:
   version: 2
-  # build:
-  #   jobs:
-  #     - build-docker-image:
-  #         filters:
-  #           tags:
-  #             only: /^build.*/
-  #           branches:
-  #             ignore: /.*/
   build-and-register:
     jobs:
       - build-push-docker-image:
@@ -38,6 +47,3 @@ workflows:
               only: /^v.*/
             branches:
               ignore: /.*/
-              
-
-              
