--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,13 @@ jobs:
           version: 20.10.12
           docker_layer_caching: true
       - run: docker login rg.fr-par.scw.cloud/tezoslink -u nologin -p $SCW_SECRET_KEY
-      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-api:$TAG /Dockerfiles/Dockerfile.api
+      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-api:$TAG -f /Dockerfiles/Dockerfile.api .
       - run: docker push rg.fr-par.scw.cloud/tezoslink/p1-api:$TAG
       - run: docker login rg.fr-par.scw.cloud/tezoslink -u nologin -p $SCW_SECRET_KEY
-      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-frontend:$TAG Dockerfiles/Dockerfile.front
+      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-frontend:$TAG -f Dockerfiles/Dockerfile.front .
       - run: docker push rg.fr-par.scw.cloud/tezoslink/p1-frontend:$TAG
       - run: docker login rg.fr-par.scw.cloud/tezoslink -u nologin -p $SCW_SECRET_KEY
-      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-proxy:$TAG Dockerfiles/Dockerfile.proxy
+      - run: docker build --tag rg.fr-par.scw.cloud/tezoslink/p1-proxy:$TAG -f Dockerfiles/Dockerfile.proxy .
       - run: docker push rg.fr-par.scw.cloud/tezoslink/p1-proxy:$TAG
 
   deploy-docker-image:
