--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,12 +27,14 @@ jobs:
       - kubernetes/install-kubeconfig:
           kubeconfig: KUBECONFIG_DATA
       - helm/install-helm-client
-      - run: helm upgrade 
-              phase1-<<parameters.env>> helm-charts-p2 -i -f helm-charts-p2/<<parameters.env>>.values.yaml 
-              -n phase1-<<parameters.env>> 
+      - run: 
+          name: Deploy
+          command: >
+              helm upgrade helm-charts-p2 -i -f helm-charts-p2/values.yaml 
+              -n phase1
               --create-namespace 
               --set << pipeline.parameters.project-helm-values >>.image.tag=$TAG 
-              --set namespace=phase1-<<parameters.env>> 
+              --set namespace=phase1
               --set << pipeline.parameters.project-helm-values >>.image.repository='rg.fr-par.scw.cloud/tezoslink/p1-api'
 
 
